[gd_scene load_steps=26 format=3 uid="uid://y7ooqx1k3tik"]

[ext_resource type="Texture2D" uid="uid://cdnratxtsurls" path="res://assets/background/mountainback.png" id="1_bdqgh"]
[ext_resource type="PackedScene" uid="uid://bmlc5h5gbouaf" path="res://src/interactive/character.tscn" id="1_km57j"]
[ext_resource type="Texture2D" uid="uid://d1gcs3x30n3k" path="res://assets/background/cloudback.png" id="1_p6k47"]
[ext_resource type="Texture2D" uid="uid://cmc246lq0hvrh" path="res://assets/background/cloudfront.png" id="2_ox2ky"]
[ext_resource type="Texture2D" uid="uid://bxybs22oecsx4" path="res://assets/background/lvl1_front.png" id="2_tupnl"]
[ext_resource type="PackedScene" uid="uid://kfxb12a1wxyl" path="res://src/interactive/coin.tscn" id="5_syrs6"]
[ext_resource type="Texture2D" uid="uid://cx0l175o7clvc" path="res://assets/foreground/lvl1_ground.png" id="7_1a65m"]
[ext_resource type="Texture2D" uid="uid://bphvm3r2uupvi" path="res://assets/interactive/log.png" id="7_ijfs0"]
[ext_resource type="Texture2D" uid="uid://sfulk5h07u0q" path="res://assets/foreground/flowers.png" id="7_onkmg"]
[ext_resource type="Texture2D" uid="uid://cr8ghxt16h5pl" path="res://assets/interactive/portal.png" id="8_o2qkq"]
[ext_resource type="Texture2D" uid="uid://b7m3nkjpyuwgx" path="res://assets/foreground/grass.png" id="10_i0fkd"]
[ext_resource type="Texture2D" uid="uid://cgwgyacm4bnxw" path="res://assets/foreground/bush.png" id="11_7xc85"]
[ext_resource type="Script" path="res://src/interactive/portal1.gd" id="12_8cjoe"]
[ext_resource type="FontFile" uid="uid://es627dw3q2bu" path="res://assets/fonts/WayfarersToyBoxRegular.ttf" id="13_lcnso"]
[ext_resource type="AudioStream" uid="uid://i5wnore0htu0" path="res://assets/music/lvl1.mp3" id="14_i84e1"]
[ext_resource type="PackedScene" uid="uid://dtfkm547yxtbg" path="res://src/ui/ui.tscn" id="15_0cqxb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f1fr4"]
texture = ExtResource("7_1a65m")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8, -8, -7.5)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8, -8, -7.5)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8, -8, -7.5)
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4anbk"]
texture = ExtResource("7_onkmg")
texture_region_size = Vector2i(7, 14)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yvk4b"]
texture = ExtResource("8_o2qkq")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_485bh"]
texture = ExtResource("7_ijfs0")
texture_region_size = Vector2i(32, 18)
use_texture_padding = false
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -12.5, -2, -15.5, 0, -16, 7, -13.5, 9.5, 14.5, 9.5, 17, 7.5, 15.5, -7.5, 14.5, -9)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lq58m"]
texture = ExtResource("10_i0fkd")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_5cvp5"]
physics_layer_0/collision_layer = 1
sources/4 = SubResource("TileSetAtlasSource_485bh")
sources/3 = SubResource("TileSetAtlasSource_yvk4b")
sources/1 = SubResource("TileSetAtlasSource_f1fr4")
sources/2 = SubResource("TileSetAtlasSource_4anbk")
sources/5 = SubResource("TileSetAtlasSource_lq58m")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cyllf"]
texture = ExtResource("11_7xc85")
texture_region_size = Vector2i(48, 16)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_nhoyd"]
sources/0 = SubResource("TileSetAtlasSource_cyllf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne77q"]
size = Vector2(30, 34)

[node name="Level1" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="CloudBack" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.05, 0.05)
motion_mirroring = Vector2(4096, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CloudBack"]
texture_filter = 1
position = Vector2(2048, -24)
texture = ExtResource("1_p6k47")

[node name="CloudFront" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1433, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CloudFront"]
texture_filter = 1
position = Vector2(717, -52)
scale = Vector2(0.56, 0.56)
texture = ExtResource("2_ox2ky")

[node name="BGBack" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.15, 0.15)
motion_mirroring = Vector2(2266, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BGBack"]
texture_filter = 1
position = Vector2(1133, -28)
texture = ExtResource("1_bdqgh")

[node name="BGFront" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2048, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BGFront"]
texture_filter = 1
position = Vector2(1025, -1)
texture = ExtResource("2_tupnl")

[node name="Coins" type="Node" parent="ParallaxBackground"]

[node name="Coin" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(3, 1)

[node name="Coin2" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(257, -75)

[node name="Coin3" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(138, -32)

[node name="Coin4" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(400, -64)

[node name="Coin5" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(585, -70)

[node name="Coin6" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(763, -55)

[node name="Coin7" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(978, -1)

[node name="Coin8" parent="ParallaxBackground/Coins" instance=ExtResource("5_syrs6")]
position = Vector2(1240, -35)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_5cvp5")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262145, 0, 1, 262145, 0, 2, 262145, 0, 3, 262145, 0, 4, 262145, 0, 5, 262145, 0, 6, 262145, 0, 7, 458753, 0, -131059, 393217, 0, -131058, 262145, 0, -131057, 262145, 0, -131056, 262145, 0, -131055, 262145, 0, -131054, 262145, 0, -131053, 262145, 0, -131052, 262145, 0, -131051, 262145, 0, -131050, 262145, 0, -131049, 262145, 0, -131048, 262145, 0, -131047, 458753, 0, -262116, 393217, 0, -262115, 262145, 0, -262114, 458753, 0, 33, 393217, 0, 34, 262145, 0, 35, 262145, 0, 36, 262145, 0, 37, 262145, 0, 38, 262145, 0, 39, 262145, 0, 40, 262145, 0, 41, 262145, 0, 42, 262145, 0, 43, 262145, 0, 44, 262145, 0, 45, 262145, 0, 46, 262145, 0, 47, 262145, 0, 48, 262145, 0, 49, 458753, 0, 56, 393217, 0, 57, 262145, 0, 58, 262145, 0, 59, 262145, 0, 60, 262145, 0, 61, 262145, 0, 62, 262145, 0, 63, 262145, 0, 64, 262145, 0, 65, 262145, 0, 66, 262145, 0, 67, 262145, 0, 68, 262145, 0, 69, 262145, 0, 70, 262145, 0, 71, 262145, 0, 72, 262145, 0, 73, 262145, 0, 74, 262145, 0, 75, 262145, 0, 76, 262145, 0, 77, 262145, 0, 78, 262145, 0, 79, 262145, 0, 80, 262145, 0, 81, 262145, 0, 82, 262145, 0, 83, 262145, 0, 84, 262145, 0, 85, 262145, 0, 86, 262145, 0, 87, 262145, 0, 88, 262145, 0, -65496, 4, 0, -65474, 4, 0, -65456, 4, 0, 65536, 851969, 0, 131072, 851969, 0, 196608, 851969, 0, 65537, 851969, 0, 131073, 851969, 0, 196609, 851969, 0, 65538, 851969, 0, 131074, 851969, 0, 196610, 851969, 0, 65539, 851969, 0, 131075, 851969, 0, 196611, 851969, 0, 65540, 851969, 0, 131076, 851969, 0, 196612, 851969, 0, 65541, 851969, 0, 131077, 851969, 0, 196613, 851969, 0, 65542, 851969, 0, 131078, 851969, 0, 196614, 851969, 0, 65543, 983041, 0, 131079, 983041, 0, 196615, 983041, 0, -65523, 917505, 0, 13, 917505, 0, 65549, 917505, 0, 131085, 917505, 0, 196621, 917505, 0, -65522, 851969, 0, 14, 851969, 0, 65550, 851969, 0, 131086, 851969, 0, 196622, 851969, 0, -65521, 851969, 0, 15, 851969, 0, 65551, 851969, 0, 131087, 851969, 0, 196623, 851969, 0, -65520, 851969, 0, 16, 851969, 0, 65552, 851969, 0, 131088, 851969, 0, 196624, 851969, 0, -65519, 851969, 0, 17, 851969, 0, 65553, 851969, 0, 131089, 851969, 0, 196625, 851969, 0, -65518, 851969, 0, 18, 851969, 0, 65554, 851969, 0, 131090, 851969, 0, 196626, 851969, 0, -65517, 851969, 0, 19, 851969, 0, 65555, 851969, 0, 131091, 851969, 0, 196627, 851969, 0, -65516, 851969, 0, 20, 851969, 0, 65556, 851969, 0, 131092, 851969, 0, 196628, 851969, 0, -65515, 851969, 0, 21, 851969, 0, 65557, 851969, 0, 131093, 851969, 0, 196629, 851969, 0, -65514, 851969, 0, 22, 851969, 0, 65558, 851969, 0, 131094, 851969, 0, 196630, 851969, 0, -65513, 851969, 0, 23, 851969, 0, 65559, 851969, 0, 131095, 851969, 0, 196631, 851969, 0, -65512, 851969, 0, 24, 851969, 0, 65560, 851969, 0, 131096, 851969, 0, 196632, 851969, 0, -65511, 983041, 0, 25, 983041, 0, 65561, 983041, 0, 131097, 983041, 0, 196633, 983041, 0, -196580, 655361, 0, -196579, 524289, 0, -196578, 720897, 0, 65569, 917505, 0, 131105, 917505, 0, 196641, 917505, 0, 65570, 851969, 0, 131106, 851969, 0, 196642, 851969, 0, 65571, 851969, 0, 131107, 851969, 0, 196643, 851969, 0, 65572, 851969, 0, 131108, 851969, 0, 196644, 851969, 0, 65573, 851969, 0, 131109, 851969, 0, 196645, 851969, 0, 65574, 851969, 0, 131110, 851969, 0, 196646, 851969, 0, 65575, 851969, 0, 131111, 851969, 0, 196647, 851969, 0, 65576, 851969, 0, 131112, 851969, 0, 196648, 851969, 0, 65577, 851969, 0, 131113, 851969, 0, 196649, 851969, 0, 65578, 851969, 0, 131114, 851969, 0, 196650, 851969, 0, 65579, 851969, 0, 131115, 851969, 0, 196651, 851969, 0, 65580, 851969, 0, 131116, 851969, 0, 196652, 851969, 0, 65581, 851969, 0, 131117, 851969, 0, 196653, 851969, 0, 65582, 851969, 0, 131118, 851969, 0, 196654, 851969, 0, 65583, 851969, 0, 131119, 851969, 0, 196655, 851969, 0, 65584, 851969, 0, 131120, 851969, 0, 196656, 851969, 0, 65585, 983041, 0, 131121, 983041, 0, 196657, 983041, 0, 65592, 917505, 0, 131128, 917505, 0, 196664, 917505, 0, 65593, 851969, 0, 131129, 851969, 0, 196665, 851969, 0, 65594, 851969, 0, 131130, 851969, 0, 196666, 851969, 0, 65595, 851969, 0, 131131, 851969, 0, 196667, 851969, 0, 65596, 851969, 0, 131132, 851969, 0, 196668, 851969, 0, 65597, 851969, 0, 131133, 851969, 0, 196669, 851969, 0, 65598, 851969, 0, 131134, 851969, 0, 196670, 851969, 0, 65599, 851969, 0, 131135, 851969, 0, 196671, 851969, 0, 65600, 851969, 0, 131136, 851969, 0, 196672, 851969, 0, 65601, 851969, 0, 131137, 851969, 0, 196673, 851969, 0, 65602, 851969, 0, 131138, 851969, 0, 196674, 851969, 0, 65603, 851969, 0, 131139, 851969, 0, 196675, 851969, 0, 65604, 851969, 0, 131140, 851969, 0, 196676, 851969, 0, 65605, 851969, 0, 131141, 851969, 0, 196677, 851969, 0, 65606, 851969, 0, 131142, 851969, 0, 196678, 851969, 0, 65607, 851969, 0, 131143, 851969, 0, 196679, 851969, 0, 65608, 851969, 0, 131144, 851969, 0, 196680, 851969, 0, 65609, 851969, 0, 131145, 851969, 0, 196681, 851969, 0, 65610, 851969, 0, 131146, 851969, 0, 196682, 851969, 0, 65611, 851969, 0, 131147, 851969, 0, 196683, 851969, 0, 65612, 851969, 0, 131148, 851969, 0, 196684, 851969, 0, 65613, 851969, 0, 131149, 851969, 0, 196685, 851969, 0, 65614, 851969, 0, 131150, 851969, 0, 196686, 851969, 0, 65615, 851969, 0, 131151, 851969, 0, 196687, 851969, 0, 65616, 851969, 0, 131152, 851969, 0, 196688, 851969, 0, 65617, 851969, 0, 131153, 851969, 0, 196689, 851969, 0, 65618, 851969, 0, 131154, 851969, 0, 196690, 851969, 0, 65619, 851969, 0, 131155, 851969, 0, 196691, 851969, 0, 65620, 851969, 0, 131156, 851969, 0, 196692, 851969, 0, 65621, 851969, 0, 131157, 851969, 0, 196693, 851969, 0, 65622, 851969, 0, 131158, 851969, 0, 196694, 851969, 0, 65623, 851969, 0, 131159, 851969, 0, 196695, 851969, 0, 65624, 851969, 0, 131160, 851969, 0, 196696, 851969, 0, -196522, 3, 0, -130986, 3, 1, -65450, 3, 2, -196521, 65539, 0, -130985, 65539, 1, -65449, 65539, 2, -196520, 131075, 0, -130984, 131075, 1, -65448, 131075, 2, 196697, 851969, 0, 131161, 851969, 0, 65625, 851969, 0, 89, 851969, 0, -65447, 851969, 0, -130983, 851969, 0, -196519, 851969, 0, -262055, 851969, 0, -327591, 851969, 0, -393127, 851969, 0, -458663, 851969, 0, -393217, 851969, 0, -327681, 851969, 0, -262145, 851969, 0, -196609, 851969, 0, -131073, 851969, 0, -65537, 851969, 0, -1, 851969, 0, 65535, 851969, 0, 131071, 851969, 0, 196607, 851969, 0, 262143, 851969, 0, -65534, 2, 0, -65529, 2, 0, -196591, 2, 0, -196586, 196610, 0, -327651, 2, 0, -65492, 2, 0, -65500, 2, 0, -65453, 6, 0, -65465, 2, 0, -65478, 2, 0, -65533, 65538, 0, -196593, 6, 0, -65498, 65538, 0, -65476, 65538, 0, -65461, 65538, 0, -65451, 65538, 0, -65458, 131074, 0, -65468, 131074, 0, -65479, 131074, 0, -65490, 131074, 0, -327652, 131074, 0, -65502, 131074, 0, -196587, 131074, 0, -65530, 196610, 0, -65487, 196610, 0, -65463, 196610, 0, -65454, 262146, 0, -65472, 262146, 0, -65494, 262146, 0, -196583, 262146, 0, -65532, 262146, 0, -65535, 327682, 0, -196592, 327682, 0, -65488, 327682, 0, -65460, 6, 0, -65491, 6, 0, -65469, 6, 0, -196589, 65538, 0, -196590, 327682, 0)

[node name="CharacterBody2D" parent="." instance=ExtResource("1_km57j")]
position = Vector2(12, -11)
scale = Vector2(1.25, 1.25)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D"]
remote_path = NodePath("../../Camera2D")

[node name="TileMap2" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_nhoyd")
format = 2
layer_0/tile_data = PackedInt32Array(-196593, 0, 0, -65501, 0, 0, -65489, 0, 0, -65469, 0, 0, -65460, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(12, -11)
scale = Vector2(1.25, 1.25)
limit_left = 0
limit_top = -132
limit_right = 1420
limit_bottom = 48

[node name="Portal" type="Area2D" parent="."]
script = ExtResource("12_8cjoe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2(1404, -17)
shape = SubResource("RectangleShape2D_ne77q")

[node name="ContinueLable" type="Label" parent="Portal"]
visible = false
offset_left = 1141.0
offset_top = -114.0
offset_right = 1381.0
offset_bottom = -99.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("13_lcnso")
theme_override_font_sizes/font_size = 10
text = "Press ENTER to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" parent="." instance=ExtResource("15_0cqxb")]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_i84e1")
volume_db = 15.0
autoplay = true

[connection signal="body_entered" from="Portal" to="Portal" method="_on_body_entered"]
[connection signal="body_exited" from="Portal" to="Portal" method="_on_body_exited"]
